--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "astro": "^5.4.1",
     "astro-pagefind": "^1.8.1",
     "clsx": "^2.1.1",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.9",
     "typescript": "^5.8.2"
