--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fontsource/geist-sans": "^5.1.0",
     "@tailwindcss/vite": "^4.0.9",
     "astro": "^5.4.1",
+    "astro-embed": "^0.9.0",
     "astro-pagefind": "^1.8.1",
     "clsx": "^2.1.1",
     "sharp": "^0.33.5",
